tests/consteval_diag_non_const_context_bad.stderr
tests/consteval_diag_non_const_context_bad.sl:4:1: SL2075: consteval error: runtime call
