tests/consteval_diag_non_const_context_bad.sl
import "compiler"

fn only_runtime() {
	compiler.error("runtime call")
}
